<resources>
    <string name="placeholder">Placeholder</string>
    <string name="app_name">ReportingApplication</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="btn_report">Report</string>
    <string name="btn_reward">Rewards</string>
    <string name="greetings">Greetings</string>
    <string name="pic_description">Image of the user shows here</string>
    <string name="logo_description">Logo shows here</string>
    <string name="user_status">Status</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="report">Report</string>
    <string name="category">Category</string>
    <string name="report_city">City</string>
    <string name="report_description">Description</string>
    <string name="report_location">Location</string>
    <string-array name="cities">
        <item>Shah Alam</item>
        <item>Petaling Jaya</item>
        <item>Klang</item>
    </string-array>
    <string name="refresh_list">Refresh</string>
</resources>
