<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ReportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="650dp">

        <TextView
            android:id="@+id/reporting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp" />

        <RelativeLayout
            android:id="@+id/category_layout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reporting_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/reporting_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/category"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reporting_category"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_traffic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_traffic_selector"
                    android:button="@null"
                    android:layout_margin="20dp"
                    android:onClick="showDialog"/>

                <RadioButton
                    android:id="@+id/radio_road"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_roads_selector"
                    android:button="@null"
                    android:layout_margin="20dp"
                    android:onClick="showDialog"/>

                <RadioButton
                    android:id="@+id/radio_signs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radio_signs_selector"
                    android:button="@null"
                    android:layout_margin="20dp"
                    android:onClick="showDialog"/>
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/category_label"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/category_layout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Traffic"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Roads"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Signs"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/city_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_label"
            android:layout_alignStart="@+id/category_layout"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/reporting_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_city"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/city_autocomplete"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reporting_city"
                android:hint="Enter a city"
                android:completionThreshold="1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/city_layout"
            android:layout_alignStart="@+id/category_layout"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/report_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_location"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/editText_location"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/report_location"
                android:inputType="text"
                android:hint="Enter a location"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/description_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_layout"
            android:layout_alignStart="@+id/category_layout"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/report_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_description"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/report_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/report_description"
                android:text="none"
                android:textSize="20sp"
                android:textColor="@color/colorSecondary"/>
        </RelativeLayout>

        <Button
            android:id="@+id/add_report"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/description_layout"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/report"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/colorPrimary"/>
    </RelativeLayout>
</ScrollView>